New wpt failures in /svg/linking/reftests/url-reference-local-textpath.svg
Categories
(Core :: SVG, defect, P4)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: wpt-sync, Unassigned)
References
Details
(Whiteboard: [wpt])
Attachments
(1 file)
Syncing wpt PR 23203 found new untriaged test failures in CI
Tests Affected
Firefox-only failures
/svg/linking/reftests/url-reference-local-textpath.svg: FAIL
CI Results
Gecko CI (Treeherder)
GitHub PR Head
Notes
These updates will be on mozilla-central once bug 1632506 lands.
Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.
This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/
If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.
Updated•5 years ago
|
Comment 1•5 years ago
•
|
||
You aren't supposed to set these to P4; per the process document P4 is basically a flag that means "don't triage, this is owned by a bot", and these bugs are explicitly not owned by bots. If you're not planning to work on this soon it should be either P3 or P5, depending on whether it's "not prioritised now" or "likely won't ever get prioritised".
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
Comment 5•5 years ago
|
||
| bugherder | ||
Description
•