Bug 1634393 - Resolve <textPath> href local references against document URL, not base URL. r=longsonr

Differential Revision: https://phabricator.services.mozilla.com/D78627